<resources>
    <string name="app_name">epilog</string>
    <string name="app_name_capital">Epilog</string>


    <string name="signup">회원가입</string>
    <string name="enter_id_password">아이디와 비밀번호를\n입력해주세요</string>
    <string name="id">아이디*</string>
    <string name="password">비밀번호*</string>
    <string name="reconfirm_password">비밀번호 재확인*</string>
    <string name="please_fill_all">모든 항목을 작성해주세요</string>
    <string name="next">다음</string>

    \
    <string name="diary_edit_title">일지 작성</string>
    <string name="enter_time_period">*시간대를 입력해주세요</string>
    <string name="before_breakfast">아침식사 전</string>
    <string name="after_breakfast">아침식사 후</string>
    <string name="before_lunch">점심식사 전</string>
    <string name="after_lunch">점심식사 후</string>
    <string name="before_dinner">저녁식사 전</string>
    <string name="after_dinner">저녁식사 후</string>
    <string name="before_sleep">자기 전</string>
    <string name="enter_time">시간 입력</string>


    <string name="medicine_name">약 이름</string>
    <string name="medicine_hint">약 이름을 입력하세요</string>
    <string name="add_button_text">추가</string>
    <string name="current_meds">복용 중인 약</string>
    <string name="carbamazepine">카바마제핀</string>
    <string name="phenytoin">페니토인</string>
    <string name="insulin">인슐린</string>
    <string name="long_medicine_name">긴 약 이름 긴 약 이름</string>
    <string name="one_pill">1 정</string>
    <string name="two_pills">2 정</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="meal_types">
        <item>아침식사</item>
        <item>점심식사</item>
        <item>저녁식사</item>
        <item>간식</item>
    </string-array>

</resources>

